# bitcoin-rpc-multiprocess

./: CMakeLists.txt
include/: http_server.h  rpc_interface.h  utils.h
src/: README.md
src/ipc/: chain.capnp.c++  chain.capnp.h  chain.capnp.proxy-client.c++  chain.capnp.proxy-server.c++  chain.capnp.proxy-types.c++  chain.capnp.proxy-types.h  chain.capnp.proxy.h  common.capnp.c++  common.capnp.h  common.capnp.proxy-client.c++  common.capnp.proxy-server.c++  common.capnp.proxy-types.c++  common.capnp.proxy-types.h  common.capnp.proxy.h  echo.capnp.c++  echo.capnp.h  echo.capnp.proxy-client.c++  echo.capnp.proxy-server.c++  echo.capnp.proxy-types.c++  echo.capnp.proxy-types.h  echo.capnp.proxy.h  handler.capnp.c++  handler.capnp.h  handler.capnp.proxy-client.c++  handler.capnp.proxy-server.c++  handler.capnp.proxy-types.c++  handler.capnp.proxy-types.h  handler.capnp.proxy.h  init.capnp.c++  init.capnp.h  init.capnp.proxy-client.c++  init.capnp.proxy-server.c++  init.capnp.proxy-types.c++  init.capnp.proxy-types.h  init.capnp.proxy.h  mining.capnp.c++  mining.capnp.h  mining.capnp.proxy-client.c++  mining.capnp.proxy-server.c++  mining.capnp.proxy-types.c++  (+2 more)
src/server/: http_server.cpp  main.cpp  rpc_interface.cpp  utils.cpp
